[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "*"
mockall = "*"

conditional = "*"
strum = "*"
strum_macros = "*"
itertools = "*"

piston_window = "*"
rodio = "*"
rand ="*"